<resources>
    <string name="app_name">Meet Groningen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_next">Quests</string>

    <!-- MainActivity -->
    <string name="JoinUsText_main">Join us and start exploring the city!</string>
    <string name="meetGroningenText_main">Meet Groningen</string>
    <string name="newQuestButton_main">New quest!</string>
    <string name="createQuestButton_main">Create a Quest!</string>
    <string name="mapButton_main">Overview of the city</string>
    <string name="continueQuestButton_main">Continue a quest</string>
    <string name="userpageButton_main">"Userpage"</string>

    <!-- New quest AlertDialog-->
    <string name="ownQuestButton">Create new</string>
    <string name="existingQuestButton">Existing</string>

    <!-- QuestActivity -->
    <string name="quest_text">Visit the following locations:</string>
    <string name="quest_item1">Martinitower</string>
    <string name="checked_item1">Did you know the Martinitower is 97 meters?</string>
    <string name="title_activity_quest">Cultural quest</string>

    <!-- ListItem -->
    <string name="list_item_button">Go!</string>
    <string name="title_activity_maps">Map</string>

    <!-- QuestPreviewActivity-->
    <string name="containsText_questPreview">Contains the following locations</string>
    <string name="pickButton_questPreview">Pick this quest!</string>
    <string name="startButton_questPreview">Start this quest!</string>
    <string name="title_activity_current_quest">Map</string>
    <string name="title_activity_quest_finished">QuestFinishedActivity</string>
    <string name="questAdded">Quest added to your list!</string>

    <!--QuestFinished-->
    <string name="congratsText_questFinished">Congrats!\n You successfully finished\n the following quest: </string>
    <string name="goMainText_questFinished">Go back to the main screen</string>
    <string name="goMainButton_questFinished">main</string>

    <!-- MakeQuestActivity-->
    <string name="finishText_makeQuest">Finish</string>
    <string name="ChooseText_makeQuest">Choose\n a landmark:</string>
    <string name="InQuestText_makeQuest">Landmarks \n in Quest:</string>
    <string name="AddLandmark_makeQuest">Create your own landmark</string>
    <string name="AddLandmarkButton_makeQuest">Create</string>
    <string name="ForgotToast_makeQuest">Your quest is empty</string>
    <string name="ForgotNameToast_makeQuest">Please add a name</string>


    <!-- Landmark_Popup_Window-->
    <string name="landmarkFound_PopupWindow">Congratulations!\nLandmark found!</string>
    <string name="nextLandmarkButton_PopupWindow">"Continue!"</string>
    <string name="quizButton_PopupWindow">"Quiz!"</string>

    <!-- UserpageActivity-->
    <string name="myProgressText_Userpage">My progress</string>
    <string name="pEarnedText_Userpage">Points earned</string>
    <string name="questFinishedText_Userpage">Quests finished</string>

    <!-- ContinueQuestActivity-->
    <string name="startedQuest_continue">Started Quests</string>
    <string name="deleteButton">Delete this quest</string>

    <!-- OnQuestActivity-->
    <string name="progressText_OnQuest">Quest Progress:</string>
    <string name="nextLandmarkText_OnQuest">Go find:</string>
    <string name="nextLandmarksText_OnQuest">Remaining landmarks:</string>
    <string name="continueQuest_in_popup">Continue</string>
    <string name="rightAnswer">Correct! +5 points</string>
    <string name="wrongAnswer">Too bad! Correct answer: </string>
    <string name="imhere">I\'m here!</string>

    <!-- AskQuestNameDialog -->
    <string name="questName_dialog">Quest Name</string>
    <string name="messageText_dialog">Finish creating by giving your quest a name</string>
    <string name="done_dialog">Done</string>
    <string name="back_dialog">Back</string>

    <!-- MakeLandMarkActivity -->
    <string name="landmarkInfo_makeLandmark">Information about this landmark</string>
    <string name="infoEditText_makeLandmark">This is a beautiful place</string>
    <string name="questNameText">Enter the name of your new landmark</string>
    <string name="nameEditText">My landmark</string>

    <string name="finishButton_makeLandmark">Finish</string>
    <string name="createQuestButton">Create Quest</string>
    <string name="forgotToast">Please choose a location and name</string>
    <string name="customAddedTextToast">Landmark added to the system</string>
    <string name="MakeLandmarkButton">Create your own landmark</string>
    <string name="congratulations2">Quest finished!</string>
    <string name="gg">Well done</string>
    <string name="reachedLandmarkToast">Reached landmark! +10 points</string>

    <string name="deleteQuestButton">Delete Quest</string>
    <string name="sendQuestButton">Send Quest</string>
    <string name="customLandmarkText">Custom Landmarks</string>
    <string name="deleteLandmarkButton">Delete Landmark</string>
    <string name="sendLandmarkButton">Send Landmark</string>
    <string name="questText">Quests:</string>
    <string name="imageViewDiscription">BackGround</string>
    <string name="manageToolbar">Manage</string>
    <string name="choose_a_quest_from_the_list">Choose a quest from the list!</string>
    <string name="info_text">You can choose to continue one of the started quests, or long tap remove it from the list!</string>
    <string name="helpMenu">Help</string>

    <string name="title_activity_tutorial">Tutorial</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tutorial2">Tutorial2</string>
    <string name="AlreadyOnServerText">Already added to Server</string>
    <string name="PutOnServerText">Thanks, it is sent</string>

</resources>
