<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/relativelayout"
    android:background="#adbbf9">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ownQuestButton"
        android:text="@string/ownQuestButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/existingQuestButton"
        android:text="@string/existingQuestButton"
        android:layout_above="@+id/ownQuestButton"
        android:layout_alignStart="@+id/ownQuestButton"
        android:layout_alignEnd="@+id/ownQuestButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MakeLandmarkButton"
        android:id="@+id/makeLandmarkButton"
        android:layout_below="@+id/ownQuestButton"
        android:layout_alignStart="@+id/ownQuestButton"
        android:layout_alignEnd="@+id/ownQuestButton" />


</RelativeLayout>
