<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<fragment
    android:id="@+id/map"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_weight="4.54"
    tools:context=".Activities.QuestPreviewActivity"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/containsText_questPreview"
        android:id="@+id/contains_questPreview" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:id="@+id/listView2"
        android:layout_weight="0.45" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickButton_questPreview"
        android:id="@+id/addButton_questPreview" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton_questPreview"
        android:id="@+id/startButton_questPreview"
        android:visibility="invisible" />


</LinearLayout>
