<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_quest_finished" tools:context=".Activities.QuestFinishedActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratsText_questFinished"
        android:id="@+id/congratsText"
        android:lines="2"
        android:textSize="15dp"
        android:textColor="#5c5c5c"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/congratsText_questFinished"
        android:visibility="invisible"
        android:layout_below="@+id/congratsText"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goMainText_questFinished"
        android:id="@+id/textViewBack"
        android:textColor="#313131"
        android:layout_above="@+id/goMainButton_questFinished"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/goMainButton_questFinished"
        android:id="@+id/goMainButton_questFinished"
        android:enabled="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:background="#0277bd" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/material_design2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/congratulations2"
        android:id="@+id/textView2"
        android:textSize="40dp"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignEnd="@+id/congratsText" />

</RelativeLayout>

