<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/progressText_OnQuest"
        android:id="@+id/progressText__OnQuest" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/progressBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nextLandmarkText_OnQuest"
        android:textColor="#FF4BB405"
        android:id="@+id/nextLandmarkText_OnQuest" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/listView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nextLandmarksText_OnQuest"
        android:id="@+id/nextLandmarksText_OnQuest"
        android:layout_marginTop="10dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/listView4"/>


</LinearLayout>