<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/profile_background"
    tools:context="rugse.team2.MeetGroningen.Activities.UserPageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/myProgressText_Userpage"
        android:id="@+id/myProgressText_UserPage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#0277bd"
        android:textSize="30dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pEarnedText_Userpage"
        android:id="@+id/pEarnedText_UserPage"
        android:layout_below="@+id/myProgressText_UserPage"
        android:textColor="#37474f"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/questFinishedText_Userpage"
        android:id="@+id/questFinishedText_UserPage"
        android:layout_below="@+id/pEarnedText_UserPage"
        android:textColor="#37474f"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView8"
        android:textColor="#039be5"
        android:layout_below="@+id/pEarnedText_UserPage"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/listView5"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/questFinishedText_UserPage"
        />

</RelativeLayout>
